--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/papaparse": "^5.3.15",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.10.0",
@@ -27,17 +32,10 @@
     "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
     "papaparse": "^5.4.1",
+    "postcss": "^8",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
